--- a/app/css/main.css
+++ b/app/css/main.css
@@ -30,6 +30,7 @@
 .site-nav{
 	width: 100%;
 	position: fixed;
+	z-index: 1;
 }
 .site-nav--deployed{
 	position: static;
@@ -234,4 +235,37 @@
 }
 .stores__link--ms::before{
 	background-image: url(../img/microsoft-logo.png);
+}
+
+.offer{
+	background-color: #f2f2f2;
+}
+
+.attraction{
+	font-weight: 300;
+	font-size: 24px;
+	text-align: center;
+
+	background-color: #fff;
+}
+
+.offer__attraction{
+	padding-top: 45px;
+	position: relative;
+}
+.offer__attraction::after{
+	position: absolute;
+	content: '';
+	left: 0;
+	bottom: -32px;
+	border-style: solid;
+	border-width: 32px 100vw 0 0;
+	border-color: #ffffff transparent transparent transparent;
+}
+
+.advantages{
+
+}
+.offer__advantages{
+	margin-top: 85px;
 }
