--- a/app/css/main.css
+++ b/app/css/main.css
@@ -283,7 +283,7 @@
 .offer__advantages{
 	margin: 0;
 	padding: 0 30px;
-	margin-top: 85px;
+	margin-top: 44px;
 	padding-bottom: 280px;
 }
 .advantages__item{
@@ -300,4 +300,72 @@
 	padding-top: 20px;
 	font-weight: 300;
 	font-size: 14px;
+}
+
+.reviews{
+	padding-top: 45px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 35px;
+	position: relative;
+}
+.reviews::after{ /*Triangle*/
+	position: absolute;
+	content: '';
+	left: 0;
+	bottom: -31px;
+	border-style: solid;
+	border-width: 32px 100vw 0 0;
+	border-color: #ffffff transparent transparent transparent;
+}
+.slider{
+
+}
+.reviews__slider{
+
+}
+.slider__item{
+	display: none;
+	
+}
+.slider__item--current{
+	display: block;
+	padding-bottom: 30px;
+}
+.review{
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	font-weight: normal;
+}
+.review__author{
+	margin: 0;
+	font-size: 18px;
+	font-weight: bold;
+	text-align: center;
+
+	padding-bottom: 30px;
+}
+.review__text{
+	line-height: 30px;
+	text-align: center;
+
+	margin: 0;
+}
+.slider__dots{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding-bottom: 10px;
+}
+.slider__dot{
+	width: 6px;
+	height: 6px;
+	background-color: #bec2c7;
+	border-radius: 3px;
+	margin-left: 8px;
+	margin-right: 8px;
+}
+.slider__dot--current{
+	border-radius: 6px;
+	border: 3px solid #283645;
 }
