--- a/app/css/main.css
+++ b/app/css/main.css
@@ -334,7 +334,6 @@
 }
 .slider__item--current{
 	display: block;
-	padding-bottom: 30px;
 }
 .review{
 	font-family: 'Open Sans', sans-serif;
@@ -355,12 +354,12 @@
 
 	margin: 0;
 }
-.slider__dots{
+.slider-dots{
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
-.slider__dot{
+.slider-dots__dot{
 	padding: 0;
 	border: none;
 	width: 6px;
@@ -370,11 +369,14 @@
 	margin-left: 8px;
 	margin-right: 8px;
 }
-.slider__dot--current{
+.slider-dots__dot--current{
 	padding: 3px;
 	border-radius: 6px;
 	background-color: #fff;
 	border: 3px solid #283645;
+}
+.reviews__slider-dots{
+	margin-top: 40px;
 }
 
 .prices{
@@ -388,10 +390,57 @@
 }
 .slider-overflow{
 	display: flex;
+	overflow-x: scroll;
 }
 
 .price-list__item{
-	width: 100%;
+	flex-shrink: 0;
+	width: 85%;
+	border-left: 2px solid #e5e5e5;
+	border-right: 2px solid #e5e5e5;
+
+	border-collapse: collapse;
+}
+.price-list__heading{
+	text-transform: uppercase;
+	font-size: 18px;
+	font-weight: bold;
+	color: white;
+
+	padding: 20px 20px;
+	border-left: 2px solid #e5e5e5;
+	border-right: 2px solid #e5e5e5;
+	background-color: #283645;
+}
+.price-list__price{
+	font-size: 24px;
+	font-weight: 300;
+}
+.price-list__row{
+	background-color: #fff;
+}
+.price-list__option{
+	font-weight: normal;
+	text-transform: uppercase;
+
+	padding: 20px 20px;
+	border-bottom: 2px solid #e5e5e5;
+}
+.price-list__included{
+	margin-left: auto;
+	display: block;
+	height: 30px;
+	width: 30px;
+	background-image: url(../img/icon-yes.svg);
+	background-position: center right;
+	background-repeat: no-repeat;
+}
+.price-list__included--not{
+	background-image: url(../img/icon-no.svg);
+}
+
+.prices__slider-dots{
+	margin-top: 40px;
 }
 
 
