--- a/app/css/main.css
+++ b/app/css/main.css
@@ -389,61 +389,58 @@
 	width: 100%;
 }
 .slider-overflow{
-	display: flex;
 	overflow-x: scroll;
 }
-
-.price-list__item{
-	flex-shrink: 0;
-	width: 85%;
-	border-left: 2px solid #e5e5e5;
-	border-right: 2px solid #e5e5e5;
-
+.price-list{
 	border-collapse: collapse;
+	border: 2px solid #e5e5e5;
 }
-.price-list__heading{
-	text-transform: uppercase;
-	font-size: 18px;
-	font-weight: bold;
+.price-list__head{
+	font-family: 'Open sans', sans-serif;
 	color: white;
 
-	padding: 20px 20px;
-	border-left: 2px solid #e5e5e5;
-	border-right: 2px solid #e5e5e5;
+	border: 2px solid #e5e5e5;
+	padding: 18px 0;
 	background-color: #283645;
 }
-.price-list__price{
-	font-size: 24px;
+.price-list__plan{
+	font-weight: bold;
+	font-size: 18px;
+
+	display: block;
+}
+.price-list__rate{
 	font-weight: 300;
+	font-size: 24px;
+
+	display: block;
 }
 .price-list__row{
-	background-color: #fff;
+	border: 2px solid #e5e5e5;
+}
+.price-list__data{
+	padding: 20px 25px;
+
+	
+}
+.price-list__data--status{
+	border-right: 2px solid #e5e5e5;
 }
 .price-list__option{
-	font-weight: normal;
-	text-transform: uppercase;
 
-	padding: 20px 20px;
-	border-bottom: 2px solid #e5e5e5;
 }
 .price-list__included{
-	margin-left: auto;
 	display: block;
 	height: 30px;
 	width: 30px;
 	background-image: url(../img/icon-yes.svg);
-	background-position: center right;
 	background-repeat: no-repeat;
+	background-size: contain;
+	background-position: center center;
 }
 .price-list__included--not{
 	background-image: url(../img/icon-no.svg);
 }
-
-.prices__slider-dots{
-	margin-top: 40px;
-}
-
-
 
 .google-map{
 	overflow: hidden;
