--- a/app/css/main.css
+++ b/app/css/main.css
@@ -398,6 +398,7 @@
 .price-list__head{
 	font-family: 'Open sans', sans-serif;
 	color: white;
+	text-transform: uppercase;
 
 	border: 2px solid #e5e5e5;
 	padding: 18px 0;
@@ -427,7 +428,7 @@
 	border-right: 2px solid #e5e5e5;
 }
 .price-list__option{
-
+	text-transform: uppercase;
 }
 .price-list__included{
 	display: block;
@@ -440,6 +441,10 @@
 }
 .price-list__included--not{
 	background-image: url(../img/icon-no.svg);
+}
+
+.prices__slider-dots{
+	margin-top: 40px;
 }
 
 .google-map{
